--- a/src/components/RatioCalculateTool.less
+++ b/src/components/RatioCalculateTool.less
@@ -1,6 +1,7 @@
 .RatioCalculateTool-mainContainer {
     width: 50%;
     padding: 20px;
+    margin: 10px 0;
     border-radius: 20px;
     background-color: aquamarine;
 
