--- a/src/components/RatioCalculateTool.less
+++ b/src/components/RatioCalculateTool.less
@@ -8,7 +8,7 @@
     .github-icon {
         position: absolute;
         top: 0px;
-        right: 40px;
+        right: 2%;
         cursor: pointer;
     }
 
