--- a/src/components/RatioCalculateTool.less
+++ b/src/components/RatioCalculateTool.less
@@ -1,5 +1,6 @@
 .RatioCalculateTool-mainContainer {
     width: 50%;
+    position: relative;
     padding: 20px;
     margin: 10px 0;
     border-radius: 20px;
@@ -7,7 +8,7 @@
 
     .github-icon {
         position: absolute;
-        top: 0px;
+        top: 0;
         right: 2%;
         cursor: pointer;
     }
